--- a/.github/workflows/daily_update.yml
+++ b/.github/workflows/daily_update.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install requests pandas
 
       - name: Run updater
-        run: python updater.py
+        run:  python src/updater.py
 
       - name: Commit and Push changes
         run: |
